--- a/package.json
+++ b/package.json
@@ -10,26 +10,24 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
-    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/drawer": "^5.12.3",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "expo": "^40.0.1",
-    "expo-localization": "~9.1.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.4",
     "react-native-btr": "^1.1.5",
+    "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.2",
     "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.3",
-    "sync-storage": "^0.4.2"
+    "react-navigation": "^4.4.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
