--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-screens": "^2.15.2",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
+    "rn-placeholder": "^3.0.3",
     "subscriptions-transport-ws": "^0.9.18"
   },
   "devDependencies": {
