--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-screens": "^2.15.2",
+    "react-native-scroll-bottom-sheet": "^0.7.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
     "rn-placeholder": "^3.0.3",
