--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "jest"
   },
   "dependencies": {
+    "expo": "^40.0.1",
+    "expo-splash-screen": "~0.8.0",
+    "expo-status-bar": "~1.0.3",
+    "expo-updates": "~0.4.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "~0.63.4",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-screens": "^2.15.2",
+    "react-native-unimodules": "~0.12.0",
+    "react-native-web": "~0.13.12",
     "@apollo/client": "^3.3.12",
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/masked-view": "^0.1.10",
@@ -20,25 +31,17 @@
     "apollo-client": "^2.6.10",
     "apollo-link-ws": "^1.0.20",
     "apollo-utilities": "^1.3.4",
-    "expo": "^40.0.1",
-    "expo-status-bar": "~1.0.3",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "0.63.4",
     "react-native-btr": "^1.1.5",
     "react-native-elements": "^3.2.0",
-    "react-native-gesture-handler": "^1.8.0",
-    "react-native-reanimated": "^1.13.2",
-    "react-native-screens": "^2.15.2",
-    "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
     "rn-placeholder": "^3.0.3",
     "subscriptions-transport-ws": "^0.9.18"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "babel-jest": "~25.2.6",
     "jest": "^26.6.3",
     "react-test-renderer": "^17.0.1"
   },
@@ -49,5 +52,7 @@
     "testMatch": [
       "**/?(*.)+(spec|test).(js|ts|tsx)"
     ]
-  }
+  },
+  "name": "leaper-front",
+  "version": "1.0.0"
 }
