--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-maps": "^0.27.1",
     "react-native-reanimated": "^1.13.3",
+    "react-native-paper": "^4.7.2",
     "react-native-screens": "^2.15.2",
     "react-native-scroll-bottom-sheet": "^0.7.0",
     "react-native-web": "~0.13.12",
