--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,38 +1,68 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+android {
 
-buildscript {
-    ext {
-        buildToolsVersion = "29.0.2"
-        minSdkVersion = 21
-        compileSdkVersion = 29
-        targetSdkVersion = 29
-    }
-    repositories {
-        google()
-        jcenter()
-    }
-    dependencies {
-        classpath("com.android.tools.build:gradle:3.5.3")
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
-}
-
-allprojects {
-    repositories {
-        mavenLocal()
-        maven {
-            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url("$rootDir/../node_modules/react-native/android")
+    subprojects {
+        afterEvaluate {project ->
+            if (project.hasProperty("android")) {
+                android {
+                    compileSdkVersion 25
+                    buildToolsVersion '25.0.0'
+                }
+            }
         }
-        maven {
-            // Android JSC is installed from npm
-            url("$rootDir/../node_modules/jsc-android/dist")
-        }
+    }
 
-        google()
-        jcenter()
-        maven { url 'https://www.jitpack.io' }
+    signingConfigs {
+        release {
+            if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+                storeFile file(MYAPP_RELEASE_STORE_FILE)
+                storePassword MYAPP_RELEASE_STORE_PASSWORD
+                keyAlias MYAPP_RELEASE_KEY_ALIAS
+                keyPassword MYAPP_RELEASE_KEY_PASSWORD
+            }
+        }
+    }
+
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
+        }
+    }
+
+    buildscript {
+        ext {
+            buildToolsVersion = "29.0.2"
+            minSdkVersion = 21
+            compileSdkVersion = 29
+            targetSdkVersion = 29
+        }
+        repositories {
+            google()
+            jcenter()
+        }
+        dependencies {
+            classpath("com.android.tools.build:gradle:4.2.0")
+
+            // NOTE: Do not place your application dependencies here; they belong
+            // in the individual module build.gradle files
+        }
+    }
+
+    allprojects {
+        repositories {
+            mavenLocal()
+            maven {
+                // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+                url("$rootDir/../node_modules/react-native/android")
+            }
+            maven {
+                // Android JSC is installed from npm
+                url("$rootDir/../node_modules/jsc-android/dist")
+            }
+
+            google()
+            jcenter()
+            maven { url 'https://www.jitpack.io' }
+        }
     }
 }
