--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apollo-client": "^2.6.10",
     "apollo-link-ws": "^1.0.20",
     "apollo-utilities": "^1.3.4",
+    "date-fns": "^2.20.0",
     "expo": "^40.0.1",
     "expo-device": "~2.4.0",
     "expo-status-bar": "~1.0.3",
@@ -31,6 +32,7 @@
     "react-modal-resizable-draggable": "^0.1.4",
     "react-native": "0.63.4",
     "react-native-btr": "^1.1.5",
+    "react-native-calendars": "^1.1255.0",
     "react-native-device-info": "^8.0.8",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "^1.10.3",
