event details done

--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "react-native-btr": "^1.1.5",
     "react-native-calendars": "^1.1255.0",
     "react-native-device-info": "^8.0.8",
+    "react-native-dialog": "^6.2.0",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-maps": "^0.27.1",
     "react-native-reanimated": "^1.13.3",
     "react-native-screens": "^2.15.2",
     "react-native-scroll-bottom-sheet": "^0.7.0",
