page tchat in course + android + ios conf

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
+    "android-rn": "react-native run-android",
+    "ios-rn": "react-native run-ios",
+    "start-rn": "react-native start",
     "test": "jest"
   },
   "dependencies": {
@@ -25,6 +28,7 @@
     "expo": "^40.0.1",
     "expo-device": "~2.4.0",
     "expo-status-bar": "~1.0.3",
+    "expo-splash-screen": "~0.8.0",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
     "react": "16.13.1",
@@ -43,6 +47,7 @@
     "react-native-screens": "^2.15.2",
     "react-native-scroll-bottom-sheet": "^0.7.0",
     "react-native-web": "~0.13.12",
+    "react-native-unimodules": "~0.12.0",
     "react-navigation": "^4.4.3",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "rn-placeholder": "^3.0.3",
