--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "date-fns": "^2.20.0",
     "expo": "^40.0.1",
     "expo-device": "~2.4.0",
-    "expo-status-bar": "~1.0.3",
+    "expo-image-picker": "~9.2.0",
     "expo-splash-screen": "~0.8.0",
+    "expo-status-bar": "~1.0.3",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
     "react": "16.13.1",
@@ -47,13 +48,14 @@
     "react-native-paper": "^4.7.2",
     "react-native-screens": "^2.15.2",
     "react-native-scroll-bottom-sheet": "^0.7.0",
-    "react-native-web": "~0.13.12",
     "react-native-unimodules": "~0.12.0",
+    "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "rn-placeholder": "^3.0.3",
     "subscriptions-transport-ws": "^0.9.18",
-    "expo-image-picker": "~9.2.0"
+    "expo-av": "~8.7.0",
+    "expo-document-picker": "~8.4.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
