--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "apollo-utilities": "^1.3.4",
     "date-fns": "^2.20.0",
     "expo": "^40.0.1",
+    "expo-av": "~8.7.0",
     "expo-device": "~2.4.0",
+    "expo-document-picker": "~8.4.1",
     "expo-image-picker": "~9.2.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
@@ -42,7 +44,9 @@
     "react-native-dialog": "^6.2.0",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-keyboard-avoiding-scroll-view": "^1.0.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-maps": "^0.27.1",
     "react-native-reanimated": "^1.13.3",
     "react-native-paper": "^4.7.2",
@@ -53,9 +57,7 @@
     "react-navigation": "^4.4.3",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "rn-placeholder": "^3.0.3",
-    "subscriptions-transport-ws": "^0.9.18",
-    "expo-av": "~8.7.0",
-    "expo-document-picker": "~8.4.1"
+    "subscriptions-transport-ws": "^0.9.18"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
