--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-image-picker": "~9.2.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
+    "expo-web-browser": "~8.6.0",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
     "react": "16.13.1",
@@ -54,10 +55,14 @@
     "react-native-scroll-bottom-sheet": "^0.7.0",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "11.0.0",
     "react-navigation": "^4.4.3",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "rn-placeholder": "^3.0.3",
-    "subscriptions-transport-ws": "^0.9.18"
+    "subscriptions-transport-ws": "^0.9.18",
+    "expo-clipboard": "~1.0.1",
+    "expo-file-system": "~9.3.0",
+    "expo-media-library": "~10.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
