--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "date-fns": "^2.20.0",
     "expo": "^40.0.1",
     "expo-av": "~8.7.0",
+    "expo-clipboard": "~1.0.1",
     "expo-device": "~2.4.0",
     "expo-document-picker": "~8.4.1",
+    "expo-file-system": "~9.3.0",
     "expo-image-picker": "~9.2.0",
+    "expo-media-library": "~10.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-web-browser": "~8.6.0",
@@ -60,9 +63,7 @@
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "rn-placeholder": "^3.0.3",
     "subscriptions-transport-ws": "^0.9.18",
-    "expo-clipboard": "~1.0.1",
-    "expo-file-system": "~9.3.0",
-    "expo-media-library": "~10.0.0"
+    "expo-sharing": "~8.5.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
