continue edit create event + start publish android app

--- a/app.json
+++ b/app.json
@@ -19,9 +19,18 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.leaper.leaper",
+      "buildNumber": "1.0.0"
     },
     "android": {
+      "package": "com.leaper.leaper",
+      "versionCode": 1,
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyBVf3TYp4_Uu8_5HEGSPtrB72QCT8wT-Oo"
+        }
+      },
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
