--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "android-rn": "react-native run-android",
     "ios-rn": "react-native run-ios",
     "start-rn": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "build:android": "expo build:android -t app-bundle",
+    "upload:android": "expo upload:android --type aab --key C://Users/Lucas/Documents/Downloads/pc-api-8010628069015158901-969-153a2d5c82ff.json",
+    "deploy:android": "npm run build:android && npm run upload:android"
   },
   "dependencies": {
     "@apollo/client": "^3.3.12",
