--- a/package.json
+++ b/package.json
@@ -63,10 +63,12 @@
     "react-native-reanimated": "^1.13.3",
     "react-native-screens": "^2.15.2",
     "react-native-scroll-bottom-sheet": "^0.7.0",
+    "react-native-svg-flagkit": "^0.9.5",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12",
     "react-native-webview": "11.0.0",
     "react-navigation": "^4.4.3",
+    "react-phone-number-input": "^3.1.22",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "rn-placeholder": "^3.0.3",
     "subscriptions-transport-ws": "^0.9.18"
