phone field done

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-maps": "^0.27.1",
     "react-native-paper": "^4.7.2",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^1.13.3",
     "react-native-screens": "^2.15.2",
     "react-native-scroll-bottom-sheet": "^0.7.0",
