config .env for api keys

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-datetimepicker-modal": "^1.0.1",
     "react-native-device-info": "^8.0.8",
     "react-native-dialog": "^6.2.0",
+    "react-native-dotenv": "^2.5.5",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-avoiding-scroll-view": "^1.0.1",
