config firebase done

--- a/.env
+++ b/.env
@@ -1,1 +1,14 @@
+######################
+##### GOOGLE MAP #####
+######################
 GOOGLE_MAP_API_KEY=AIzaSyBiHTxaw_bmw2Mt4Y9xWrWzLJkmUD7shPg
+######################
+###### FIREBASE ######
+######################
+FIREBASE_API_KEY=AIzaSyDjpm6TTazS4dxkb76CuQWDPNTRFysEYy0
+FIREBASE_PROJECT_ID=iw-pa-778a1
+FIREBASE_MESSAGING_SENDER_ID=431166904409
+FIREBASE_APP_ID=1:431166904409:web:f872e6801610b0241c3948
+FIREBASE_AUTH_DOMAIN=iw-pa-778a1.firebaseapp.com
+FIREBASE_DATABASE_URL=https://iw-pa-778a1-default-rtdb.firebaseio.com
+FIREBASE_STORAGE_BUCKET=iw-pa-778a1.appspot.com
