--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-web-browser": "~8.6.0",
+    "firebase": "^8.6.7",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
     "react": "16.13.1",
