--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "firebase": "^8.6.7",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
+    "json-to-graphql-query": "^2.0.0",
     "react": "16.13.1",
     "react-devtools": "^4.13.0",
     "react-dom": "16.13.1",
