--- a/app.json
+++ b/app.json
@@ -26,6 +26,7 @@
     "android": {
       "package": "com.leaper.leaper",
       "versionCode": 1,
+      "googleServicesFile": "./google-services.json",
       "config": {
         "googleMaps": {
           "apiKey": "AIzaSyBiHTxaw_bmw2Mt4Y9xWrWzLJkmUD7shPg"
