--- a/package.json
+++ b/package.json
@@ -86,6 +86,9 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "eslint": "^7.29.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-native": "^3.11.0",
     "jest": "^26.6.3",
     "react-test-renderer": "^17.0.1"
   },
