--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,8 +20,8 @@
         "no-undef": 0,
         "no-dupe-keys": 0,
         "no-global-assign": 0,
-        "no-unreachable": 0,
-        "no-empty": 0
+        "no-unreachable": 0
+        // "no-empty": 0
     },
     "plugins": [
         "react",
