--- a/package.json
+++ b/package.json
@@ -64,12 +64,14 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-maps": "^0.27.1",
+    "react-native-modalbox": "^2.0.2",
     "react-native-paper": "^4.7.2",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-screens": "^2.15.2",
     "react-native-scroll-bottom-sheet": "^0.7.0",
     "react-native-svg-flagkit": "^0.9.5",
+    "react-native-swiper": "^1.6.0-rc.3",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12",
     "react-native-webview": "11.0.0",
