--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Run lint
         run: npm run lint
 
+      - name: Run jest
+        run: npm t
+
       - name: Run expo install
         run: npm install --global expo-cli
 
@@ -44,9 +47,6 @@ jobs:
 
       - name: Run Build
         run: expo build:android --skip-workflow-check -t app-bundle
-
-      #- name: Run jest
-      #  run: npm t
 
       #- name: Run cypress
       # TODO: implement
