--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "date-fns": "^2.20.0",
     "expo": "^40.0.1",
     "expo-av": "~8.7.0",
+    "expo-camera": "~9.1.0",
     "expo-clipboard": "~1.0.1",
     "expo-device": "~2.4.0",
     "expo-document-picker": "~8.4.1",
     "expo-file-system": "~9.3.0",
+    "expo-image-manipulator": "~8.4.0",
     "expo-image-picker": "~9.2.0",
     "expo-media-library": "~10.0.0",
     "expo-notifications": "~0.8.2",
