--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-image-picker": "~9.2.0",
     "expo-media-library": "~10.0.0",
     "expo-notifications": "~0.8.2",
+    "expo-secure-store": "~9.3.0",
     "expo-sharing": "~8.5.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
