add for pull request

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,11 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches:
-      - "add/*"
+      
   pull_request:
-
-  # Allows you to run this workflow manually from the Actions tab
+    - "add/*"
+    - "fix/*"
+    
   workflow_dispatch:
 
 jobs:
