--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,10 @@ name: CI
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  pull_request:
+  merge:
     - "add/*"
     - "fix/*"
-
+    
   workflow_dispatch:
 
 jobs:
