--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,13 @@ name: CI
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  merge:
-    - "add/*"
-    - "fix/*"
-    
+  push:
+      
+  pull_request:
+    branches:
+      - "add/*"
+      - "fix/*"
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
