--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,9 @@ name: CI
 
 # Controls when the action will run.
 on:
-
   pull_request:
     branches:
-      - "add/*"
-      - "fix/*"
+      - latest
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
