--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,8 @@
         "no-dupe-keys": 0,
         "no-global-assign": 0,
         "no-unreachable": 0,
-         "no-empty": 0
+         "no-empty": 0,
+         "no-prototype-builtins": 0
     },
     "plugins": [
         "react",
