--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
     },
     "android": {
       "package": "com.leaper.leaper",
-      "versionCode": "1.0.1",
+      "versionCode": 2,
       "googleServicesFile": "./google-services.json",
       "config": {
         "googleMaps": {
